New Update to code

--- a/index.html
+++ b/index.html
@@ -22,15 +22,24 @@
             class="profile__avatar"
           />
           <div class="profile__column">
-            <h1 class="profile__name">Bessie Coleman</h1>
-            <p class="profile__description">Civil Aviator</p>
+            <h1 class="profile__name">
+              Aliaune Damala Bouga Time Bongo Puru Nacka Lu Lu Lu Badara Akon
+            </h1>
+            <p class="profile__description">
+              Known mononymously as Akon (/ˈeɪkɒn/), is a Senegalese-American
+              singer, record producer, and entrepreneur. And influential figure
+              in modern world
+            </p>
             <button type="button" class="profile__edit-btn">
               <img src="./images/pencil.svg" alt="pencil icon" />Edit Profile
             </button>
           </div>
-          <!--remember to give a class name to the image-->
           <button type="button" class="profile__add-btn">
-            <img src="./images/plus.svg" alt="plus icon" />New Post
+            <img
+              src="./images/plus.svg"
+              alt="plus icon"
+              class="image__plus-icon"
+            />New Post
           </button>
         </section>
         <section class="cards page__section">
@@ -49,7 +58,7 @@
             <li class="card">
               <img
                 src="./images/2-photo-by-ceiline-from-pexels.jpg"
-                alt="Val Thorens"
+                alt="Restaurant"
                 class="card__image"
               />
               <div class="card__content">
@@ -60,7 +69,7 @@
             <li class="card">
               <img
                 src="./images/3-photo-by-tubanur-dogan-from-pexels.jpg"
-                alt="Val Thorens"
+                alt="Outdoor cafe"
                 class="card__image"
               />
               <div class="card__content">
@@ -71,20 +80,18 @@
             <li class="card">
               <img
                 src="./images/4-photo-by-maurice-laschet-from-pexels.jpg"
-                alt="Val Thorens"
+                alt="Longbridge forest"
                 class="card__image"
               />
               <div class="card__content">
-                <h2 class="card__title">
-                  A very long bridge, over the forest...
-                </h2>
+                <h2 class="card__title">A very long bridge, over the forest</h2>
                 <button type="button" class="card__like-btn"></button>
               </div>
             </li>
             <li class="card">
               <img
                 src="./images/5-photo-by-van-anh-nguyen-from-pexels.jpg"
-                alt="Val Thorens"
+                alt="Morning light tunnel"
                 class="card__image"
               />
               <div class="card__content">
@@ -95,7 +102,7 @@
             <li class="card">
               <img
                 src="./images/6-photo-by-moritz-feldmann-from-pexels.jpg"
-                alt="Val Thorens"
+                alt="Moutain house"
                 class="card__image"
               />
               <div class="card__content">
@@ -106,7 +113,6 @@
           </ul>
         </section>
       </main>
-      <!-- remember to add the fonts to footer and adjust it -->
       <footer class="footer">&copy;2025 Yohan Encarnacion</footer>
     </div>
   </body>
