New update to my project

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 class="card__image"
               />
               <div class="card__content">
-                <h2 class="card__title">Restaurant terrance</h2>
+                <h2 class="card__title-2">Restaurant terrance</h2>
                 <button type="button" class="card__like-btn"></button>
               </div>
             </li>
@@ -73,7 +73,7 @@
                 class="card__image"
               />
               <div class="card__content">
-                <h2 class="card__title">An outdoor cafe</h2>
+                <h2 class="card__title-3">An outdoor cafe</h2>
                 <button type="button" class="card__like-btn"></button>
               </div>
             </li>
@@ -84,7 +84,9 @@
                 class="card__image"
               />
               <div class="card__content">
-                <h2 class="card__title">A very long bridge, over the forest</h2>
+                <h2 class="card__title-4">
+                  A very long bridge, over the forest
+                </h2>
                 <button type="button" class="card__like-btn"></button>
               </div>
             </li>
@@ -95,7 +97,7 @@
                 class="card__image"
               />
               <div class="card__content">
-                <h2 class="card__title">Tunnel with morning light</h2>
+                <h2 class="card__title-5">Tunnel with morning light</h2>
                 <button type="button" class="card__like-btn"></button>
               </div>
             </li>
@@ -106,7 +108,7 @@
                 class="card__image"
               />
               <div class="card__content">
-                <h2 class="card__title">Mountain house</h2>
+                <h2 class="card__title-6">Mountain house</h2>
                 <button type="button" class="card__like-btn"></button>
               </div>
             </li>
