New Update For My Project

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <img
               src="./images/plus.svg"
               alt="plus icon"
-              class="image__plus-icon"
+              class="profile__plus-icon"
             />New Post
           </button>
         </section>
@@ -62,7 +62,7 @@
                 class="card__image"
               />
               <div class="card__content">
-                <h2 class="card__title-2">Restaurant terrance</h2>
+                <h2 class="card__title">Restaurant terrance</h2>
                 <button type="button" class="card__like-btn"></button>
               </div>
             </li>
@@ -73,7 +73,7 @@
                 class="card__image"
               />
               <div class="card__content">
-                <h2 class="card__title-3">An outdoor cafe</h2>
+                <h2 class="card__title">An outdoor cafe</h2>
                 <button type="button" class="card__like-btn"></button>
               </div>
             </li>
@@ -84,9 +84,7 @@
                 class="card__image"
               />
               <div class="card__content">
-                <h2 class="card__title-4">
-                  A very long bridge, over the forest
-                </h2>
+                <h2 class="card__title">A very long bridge, over the forest</h2>
                 <button type="button" class="card__like-btn"></button>
               </div>
             </li>
@@ -97,7 +95,7 @@
                 class="card__image"
               />
               <div class="card__content">
-                <h2 class="card__title-5">Tunnel with morning light</h2>
+                <h2 class="card__title">Tunnel with morning light</h2>
                 <button type="button" class="card__like-btn"></button>
               </div>
             </li>
@@ -115,7 +113,7 @@
           </ul>
         </section>
       </main>
-      <footer class="footer">&copy;2025 Yohan Encarnacion</footer>
+      <footer class="footer__copyright">&copy;2025 Yohan Encarnacion</footer>
     </div>
   </body>
 </html>
