--- a/index.html
+++ b/index.html
@@ -106,14 +106,16 @@
                 class="card__image"
               />
               <div class="card__content">
-                <h2 class="card__title-6">Mountain house</h2>
+                <h2 class="card__title">Mountain house</h2>
                 <button type="button" class="card__like-btn"></button>
               </div>
             </li>
           </ul>
         </section>
       </main>
-      <footer class="footer__copyright">&copy;2025 Yohan Encarnacion</footer>
+      <footer class="footer">
+       <p class="footer__copyright">&copy;2025 Yohan Encarnacion</p>
+      </footer>
     </div>
   </body>
 </html>
