--- a/index.html
+++ b/index.html
@@ -114,8 +114,9 @@
         </section>
       </main>
       <footer class="footer">
-       <p class="footer__copyright">&copy;2025 Yohan Encarnacion</p>
+        <p class="footer__copyright">&copy;2025 Yohan Encarnacion</p>
       </footer>
     </div>
+    <script src="/scripts/index.js" defer></script>
   </body>
 </html>
