--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <footer class="footer">
         <p class="footer__copyright">&copy;2025 Yohan Encarnacion</p>
       </footer>
-      <div class="modal modal_opened">
+      <div class="modal modal_opened" id="edit-modal">
         <div class="modal__container">
           <button type="submit" class="modal__close-btn"></button>
           <h2 class="modal__title">Edit profile</h2>
