New Update to project

--- a/index.html
+++ b/index.html
@@ -53,18 +53,19 @@
       <footer class="footer">
         <p class="footer__copyright">&copy;2025 Yohan Encarnacion</p>
       </footer>
-      <div class="modal modal_opened" id="edit-modal">
+      <div class="modal" id="edit-modal">
         <div class="modal__container">
-          <button type="submit" class="modal__close-btn"></button>
+          <button type="button" class="modal__close-btn"></button>
           <h2 class="modal__title">Edit profile</h2>
           <form name="edit profile" class="modal__form">
-            <label for="profiel-name-input" class="modal__label"
+            <label for="profile-name-input" class="modal__label"
               >Name
               <input
                 id="profile-name-input"
                 type="text"
                 class="modal__input"
                 placeholder="Type your name"
+                required
               />
             </label>
             <label for="profile-description-input" class="modal__label"
@@ -74,6 +75,7 @@
                 type="text"
                 class="modal__input"
                 placeholder="Describe yourself"
+                required
               />
             </label>
             <button type="submit" class="modal__submit-btn">Save</button>
@@ -81,6 +83,6 @@
         </div>
       </div>
     </div>
-    <script src="/scripts/index.js" defer></script>
+    <script src="./scripts/index.js" defer></script>
   </body>
 </html>
