--- a/index.html
+++ b/index.html
@@ -82,6 +82,36 @@
           </form>
         </div>
       </div>
+
+      <div class="modal" id="add-card-modal">
+        <div class="modal__container">
+          <button type="button" class="modal__close-btn"></button>
+          <h2 class="modal__title">New Post</h2>
+          <form id="add-card-form" class="modal__form">
+            <label for="add-card-link-input" class="modal__label"
+              >Image link
+              <input
+                id="add-card-link-input"
+                type="url"
+                class="modal__input"
+                placeholder="Paste a link to the picture"
+                required
+              />
+            </label>
+            <label for="add-card-caption-input" class="modal__label"
+              >Caption
+              <input
+                id="add-card-caption-input"
+                type="text"
+                class="modal__input"
+                placeholder="Type your caption"
+                required
+              />
+            </label>
+            <button type="submit" class="modal__submit-btn">Save</button>
+          </form>
+        </div>
+      </div>
     </div>
     <script src="./scripts/index.js" defer></script>
   </body>
