--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                 <div class="card__footer">
                   <h2 class="card__title"></h2>
                   <button type="button" class="card__like-btn"></button>
+                  <button type="button" class="card__delete-btn"></button>
                 </div>
               </li>
             </template>
