--- a/index.html
+++ b/index.html
@@ -114,6 +114,18 @@
         </div>
       </div>
     </div>
+
+    <div class="modal" id="preview-modal">
+      <div class="modal__content modal__content_type_preview">
+        <button
+          class="modal__close modal__close_type_preview"
+          aria-label="Close modal"
+          type="button"
+        ></button>
+        <img src="" alt="" class="modal__image" />
+        <p class="modal__caption">Golden Gate bridge</p>
+      </div>
+    </div>
     <script src="./scripts/index.js" defer></script>
   </body>
 </html>
