New update were made to the buttons and cards

--- a/index.html
+++ b/index.html
@@ -118,12 +118,12 @@
     <div class="modal" id="preview-modal">
       <div class="modal__content modal__content_type_preview">
         <button
-          class="modal__close modal__close_type_preview"
+          class="modal__close-btn modal__close-btn_type_preview"
           aria-label="Close modal"
           type="button"
         ></button>
         <img src="" alt="" class="modal__image" />
-        <p class="modal__caption">Golden Gate bridge</p>
+        <p class="modal__caption"></p>
       </div>
     </div>
     <script src="./scripts/index.js" defer></script>
