--- a/index.html
+++ b/index.html
@@ -64,22 +64,31 @@
               <input
                 id="profile-name-input"
                 type="text"
-                class="modal__input"
+                class="modal__input modal__input_type_error"
                 placeholder="Type your name"
                 required
+                minlength="2"
+                maxlength="40"
               />
+              <span id="profile-name-input-error" class="modal__error"></span>
             </label>
             <label for="profile-description-input" class="modal__label"
               >Description
               <input
                 id="profile-description-input"
                 type="text"
-                class="modal__input"
+                class="modal__input modal__input_type_error"
                 placeholder="Describe yourself"
                 required
+                minlength="2"
+                maxlength="200"
               />
+              <span
+                id="profile-description-input-error"
+                class="modal__error"
+              ></span>
             </label>
-            <button type="submit" class="modal__submit-btn">Save</button>
+            <button type="submit" class="modal__submit-btn modal__submit-btn_disabled">Save</button>
           </form>
         </div>
       </div>
@@ -94,22 +103,29 @@
               <input
                 id="add-card-link-input"
                 type="url"
-                class="modal__input"
+                class="modal__input modal__input_type_error"
                 placeholder="Paste a link to the picture"
                 required
               />
+              <span id="add-card-link-input-error" class="modal__error"></span>
             </label>
             <label for="add-card-caption-input" class="modal__label"
               >Caption
               <input
                 id="add-card-caption-input"
                 type="text"
-                class="modal__input"
+                class="modal__input modal__input_type_error"
                 placeholder="Type your caption"
                 required
+                minlength="2"
+                maxlength="30"
               />
+              <span
+                id="add-card-caption-input-error"
+                class="modal__error"
+              ></span>
             </label>
-            <button type="submit" class="modal__submit-btn">Save</button>
+            <button type="submit" class="modal__submit-btn modal__submit-btn_disabled">Save</button>
           </form>
         </div>
       </div>
@@ -126,6 +142,7 @@
         <p class="modal__caption"></p>
       </div>
     </div>
+    <script src="./scripts/validation.js" defer></script>
     <script src="./scripts/index.js" defer></script>
   </body>
 </html>
